css/common.css
/*removes default margin and padding from the slides*/
* {
    padding: 0;
    margin: 0;
}

html {
    scroll-behavior: smooth;
}

body {
    background: linear-gradient(180deg, #22272E 0%, #22272E 40%, #000000 98%);
    box-sizing: border-box;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
}

header {
    background-color: #2D333B;
}

li {
    list-style: none;
}

a {
    color: #CDD9E5;
    text-decoration: none;
    font-weight: 600;
    font-size: 20px;
}

.container {
    max-width: 1224px;
    width: 92%;
    margin: 0 auto;
}

.navbar {
    min-height: 60px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.logo {
    font-size: 2rem;
}

.nav-menu {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 60px;
}


.nav-link:hover {
    color: #a6b1b9;
    border-bottom: 5px solid yellow;
    padding-bottom: 12.2px;
    border-radius: 10%;
}

.nav-link.active {
    border-bottom: 5px solid yellow;
}


.hamburger {
    display: none;
    cursor: pointer;
}

.bar {
    display: block;
    width: 25px;
    height: 3px;
    margin: 5px auto;
    -webkit-transition: all 0.3s ease;
    transition: all 0.3s ease;
    background-color: white;
}

/*display property of the hamburger menu to block when the screen is smaller than or equal to 800px*/
@media (max-width: 800px) {
    .hamburger {
        display: block;
    }

    /*changes the three bars that make up the hamburger menu icon to create an "X" shape */
    /*uses nth-child to select the 3 spans (hamburger menu)*/
    .hamburger.active .bar:nth-child(1) {
        transform: translateY(8px) rotate(45deg);
    }

    /*when the hamburger menu has an active class, which is added when the user clicks on the menu*/
    .hamburger.active .bar:nth-child(2) {
        opacity: 0;
    }

    .hamburger.active .bar:nth-child(3) {
        transform: translateY(-8px) rotate(-45deg);
    }

    /*menu is off the screen and hidden until the user clicks on the hamburger menu*/
    /*The transition property adds a smooth animation effect to the menu sliding in and out*/
    .nav-menu {
        position: fixed;
        z-index: 999;
        left: -100%;
        top: 60px;
        gap: 0;
        flex-direction: column;
        background-color: #20262a;
        width: 100%;
        text-align: center;
        transition: 0.3s;
    }

    .nav-item {
        margin: 16px 0;
    }

    /*menu to slide in from the left side of the screen when in active state*/
    .nav-menu.active {
        left: 0;
    }
}

footer {
/*margin-top: 100%;*/
    display: flex;
    background-color: #2D333B;
    min-height: 5vh;
    align-items: center;
    justify-content: center;
    color: #ADBAC7;
    font-weight: normal;
    font-size: 20px;
}

.heading {
    background: -webkit-linear-gradient(300deg, #93F5EC 20%, #A77BF3 70%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-size: 4rem;
    margin-top: 4%;
    text-align: center;
    width: 100%;
    transition: all 0.3s;
}

@media screen and (max-width: 600px) {
    .heading {
        margin-top: 10%;
        font-size: 3rem;
        transition: all 0.3s;
    }
}

.logo{
    /*margin-left: -4%;*/
    width: 60px;
    height: 60px;
}

